
July 31, 2009
-------------
#524592 by Dave Reid: Added email to fake user object sent to Author Pane on comments for anon users.
#534816 by Michelle: Made sure all classes / IDs were forum specific.
NOISSUE by Michelle: Added a page preprocess to add a variable "forum_page" when a page is either the main forum/ pages or a node that can go in the forums.

July 30, 2009
-------------
#525206 by Michelle: Fixed error with search results template not being found.
#531572 by Michelle: Fixed error that caused incorrect 'new posts' amounts on forum overview.
#267859 by Michelle: Bypassed core forum list preprocess to avoid running forum title thru check_plain twice and also remove redundant code.
#502466 by neclimdul: Mark as read improvements.

July 29, 2009
-------------
#510772 by Michelle: Added group topic list view and outer template.
#534816 by Michelle: Changed top anchor to forum-topic-top to avoid conflicts with some themes.
#527020 by merlinofchaos: Panelize advanced forum. This introduces a "task" or a system page 
                          for Panels for the forum page. It introduces 3 default handlers 
                          for that page which cover the top page, a forum container page 
                          and a forum topic list page. It includes a bunch of panels/ctools 
                          plugins in order to cover all this content and makes it possible 
                          to change the layout and easily add/remove content to these pages.
#533818 by merlinofchaos: Allow styles to use preprocesses.

July 28, 2009
-------------
#520758 by merlinofchaos: Allow forums not in containers to have a fake container so they still render okay.

July 23, 2009
-------------
#497450 by Michelle: More work on the text replacement images.

July 21, 2009
-------------
#523422 by Michelle: Fixed wrong location variable name.

July 20, 2009
------------
#523942 by Michelle: Normalized table widths on forum listing.